manifests/constants-deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "polititweet-streamer"
  labels:
    app: "polititweet-streamer"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "polititweet-streamer"
  template:
    metadata:
      labels:
        app: "polititweet-streamer"
    spec:
      tolerations:
      - key: kubernetes.azure.com/scalesetpriority
        value: spot
        effect: NoSchedule
      containers:
      - name: "streamer"
        image: "politiwatch.azurecr.io/polititweet:latest"
        command: ["python", "manage.py", "stream"]
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "polititweet-scanner"
  labels:
    app: "polititweet-scanner"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "polititweet-scanner"
  template:
    metadata:
      labels:
        app: "polititweet-scanner"
    spec:
      tolerations:
      - key: kubernetes.azure.com/scalesetpriority
        value: spot
        effect: NoSchedule
      containers:
      - name: "polititweet-scanner"
        image: "politiwatch.azurecr.io/polititweet:latest"
        command: ["python", "manage.py", "scan", "--infinite"]
