manifests/web-deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "polititweet-webserver"
  labels:
    app: "polititweet-webserver"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "polititweet-webserver"
  template:
    metadata:
      labels:
        app: "polititweet-webserver"
    spec:
      tolerations:
      - key: kubernetes.azure.com/scalesetpriority
        value: spot
        effect: NoSchedule
      containers:
      - name: "polititweet"
        image: "politiwatch.azurecr.io/polititweet:latest"
---
apiVersion: v1
kind: Service
metadata:
  name: polititweet-webserver-service  
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: polititweet-webserver
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: polititweet-webserver-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: polititweet.org
    http:
      paths:
      - backend:
          serviceName: polititweet-webserver-service
          servicePort: 8080
        path: /
  - host: beta.polititweet.org
    http:
      paths:
      - backend:
          serviceName: polititweet-webserver-service
          servicePort: 8080
        path: /
